--- a/docs/3_textures/3d.md
+++ b/docs/3_textures/3d.md
@@ -4,8 +4,15 @@
 
 These Models are other then classic textures created in a software like blockbench and exported as a json file.
 
-## Create
+## Requirement
 
-1. You have to open the model you want to edit in your favorite text editor and check if an origin is set, if no origin is set you can proceed in blockbench if an origin is set you should open it up in an other window an copy the model data.
-2. second
-3. third
+- Having blockbench installed
+- Having a Text Editor installed (e.g. VS Code, Atom, etc.)
+
+## Create Models
+
+1. Open Blockbench 
+
+## Edit Models
+
+
